# hackathon-elevenlabs

./: .env.example  .gitignore  LICENSE  Pipfile  README.md  package-lock.json  package.json  requirements.txt  trigger.config.ts
.devcontainer/: devcontainer.json  docker-compose.yaml
Tools/: food_inventory_processor.py  fridge_inventory.json
api/: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
api/.devcontainer/: devcontainer.Dockerfile
api/src/: di.py
api/src/domain/: models.py
api/src/infra/http/: fastapi.py  router.py
api/src/infra/services/: elevenlabs.py  groq.py
noteboooks/: cleaning_data.ipynb  kaggle-recipe-embedding.ipynb
src/: config.py  initializer.py
src/infra/services/: fal.py
src/trigger/: example.ts
supabase/: config.toml
supabase/functions/add-missing-ingredient/: index.ts
supabase/functions/complete-user-request/: index.ts
supabase/functions/create-user-request/: index.ts
supabase/functions/generate-graph/: index.ts
supabase/functions/get-embedding/: index.ts
supabase/functions/get-pantry/: index.ts
supabase/functions/get-pending-steps/: index.ts
supabase/functions/mark-step-completed/: index.ts
supabase/functions/mark-step-ready-to-complete/: index.ts
supabase/functions/mark-step-started/: index.ts
supabase/migrations/: 20240320000000_create_recipe_steps.sql  20240321000000_create_user_requests.sql  20240322000000_security_policies.sql  20240323000000_add_step_status.sql  20240324000000_create_missing_ingredients.sql
testes/: adapted_toposort.py  cooking_crew.py
(+3 files in other folders)
